<resources>
    <string name="app_name">QuQiongYou</string>
    <string name="join"><![CDATA[立即参加>>]]></string>
    <string name="left_time">剩下时间</string>
    <string name="home">首页</string>
    <string name="community">社区</string>
    <string name="mine">我的</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="user_id">用户ID</string>
    <string name="my_post">我的发帖</string>
    <string name="my_origination">我的发起</string>
    <string name="collection">收藏的活动</string>
    <string name="clear_cache">清除缓存</string>
    <string name="feedback">反馈</string>
    <string name="about_us">关于我们</string>
    <string name="origination">发起活动</string>
    <string name="theme">主题</string>
    <string name="starttime">时间</string>
    <string name="location">地点</string>
    <string name="ticket_price">票价</string>
    <string name="contacts_num">联系人电话</string>
    <string name="theme_hint">输入你的活动主题</string>
    <string name="time_hint">选择时间</string>
    <string name="location_hint">输入地点</string>
    <string name="fuckticket">逃票攻略</string>
    <string name="fuckticket_title">标题</string>
    <string name="toTop">置顶</string>
    <string name="prime">精品</string>
    <string name="post">发帖</string>
    <string name="next">下一步</string>
    <string name="image">图片</string>
    <string name="emoji">表情</string>
    <string name="hidden_keyboard">收起键盘</string>
    <string name="tripDetail">活动详情</string>
    <string name="sharing">分享</string>
    <string name="join2">立即参加</string>
    <string name="organizer">联系发起人</string>
</resources>
