<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle">
        <ImageView
            android:src="@drawable/back"
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_gravity="center"
            android:textSize="@dimen/toolbar_title_size"
            android:text="@string/post"
            style="@style/deep_tv_style" />
        <TextView
            android:text="@string/next"
            style="@style/deep_tv_style"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/toolbar_title_size"
            android:layout_gravity = "right"/>
    </android.support.v7.widget.Toolbar>
    <!-- 底部的按钮 -->


    <!-- 富文本编辑器 -->

    <dream.quqiongyou.post.view.RichTextEditor
        android:layout_gravity="bottom"
        android:id="@+id/richEditor"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#fff" />
    <RelativeLayout
        android:id="@+id/acname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="@color/main_layout_color"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        <LinearLayout
            android:orientation="vertical"
            android:padding="5dp"
            android:id="@+id/keyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:background="@mipmap/keyboard"
                android:gravity="center_horizontal" />
            <TextView
                style="@style/post_tv_style"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/post_tv_size"
                android:text="@string/hidden_keyboard"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="5dp"
            android:id="@+id/button1"
            android:layout_toLeftOf="@+id/emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:background="@mipmap/img"
                android:gravity="center_horizontal" />
            <TextView
                style="@style/post_tv_style"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/post_tv_size"
                android:text="@string/image"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="5dp"
            android:id="@+id/emoji"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:background="@mipmap/face"
                android:gravity="center_horizontal" />
            <TextView
                style="@style/post_tv_style"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/post_tv_size"
                android:text="@string/emoji"/>
        </LinearLayout>



    </RelativeLayout>
</LinearLayout>